--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=JobApplication
-spring.h2.console.enabled=true;
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
